integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.rs
use juniper::graphql_scalar;

#[graphql_scalar(transparent)]
struct Scalar(i32, i32);

fn main() {}
