integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.stderr
error: GraphQL scalar expected exactly 1 field, e.g., Test(i32) because of `transparent` attribute
 --> fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.rs:4:1
  |
4 | struct Scalar(i32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^
